--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@
 }
 
 #banner{
-      background: url("assest\home banner.png");  
+      background: url("assest/home_banner.png");  
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
